--- a/vr革命展馆/vr-pro/style.css
+++ b/vr革命展馆/vr-pro/style.css
@@ -2,3 +2,10 @@
     margin : 0; 
     padding : 0;
 }
+
+.mark-style{
+    background: rgba(0,0,0,0.5);
+    color : #fff;
+    border:1px solid #fff;
+    padding: 10px;
+}
